# OfflineTest

./: .gitignore  CMakeLists.txt  README.md  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
doc/: 离线测试模块开发需求20260324.xlsx
